--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.8",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.4",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1"
   },
@@ -32,6 +33,4 @@
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.5"
   }
-  
-
 }
